--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ textarea{
 .card{
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  	height: 46rem;
+  	min-height: 35rem;
 }
 table thead tr{
 	background-color: #505050;
