--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,14 @@ body {
 	line-height: 1.8;
 	color: #000000;
 	font-family: Montserrat, sans-serif;
+	background-color: #f1f1f1;
+}
+html {
+  scroll-behavior: smooth;
 }
 .jumbotronBanner {
-	background-color: #f1f1f1;
-	color: #000000;
+	background-color: hsl(40, 95%, 56%);
+	color: #ffffff;
 	padding: 100px 25px 70px 25px;
 	font-family: Montserrat, sans-serif;
 }
@@ -106,7 +110,7 @@ p{
   	min-height: 62rem;
 }
 .contact-page-body{
-	background: url(../images/safari.jpg);
+	background: url(../images/safari/safari.jpg);
 	width: 100%;
 }
 footer{
@@ -116,6 +120,14 @@ footer{
 }
 .btn-send{
 	background-color: #505050;
+	color: white;
+}
+::selection {
+  	background-color: hsl(40, 95%, 56%);
+	color: white;
+}
+::-moz-selection {
+  	background-color: hsl(40, 95%, 56%);
 	color: white;
 }
 .place-img{
@@ -164,7 +176,7 @@ textarea{
 .card{
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  	min-height: 35rem;
+  	min-height: 20rem;
 }
 table thead tr{
 	background-color: #505050;
