--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ html {
 	letter-spacing: 4px;
 	font-family: Montserrat, sans-serif;
 }
+.text-design-footer{
+	letter-spacing: 2px;
+	font-family: Montserrat, sans-serif;
+}
 p{
 	letter-spacing: 1px;
 	font-family: Montserrat, sans-serif;
